@startuml
skinparam classAttributeIconSize 0

class Pila{
  - elementos: list
  + Pila()
  + push(elemento: Object): void
  + pop(): Object
  + isEmpty(): bool
  + top(): Object
  + size(): int
  + reverse(): Pila
  + pushAll(otraPila: Pila): void
}

class Cola{
  - elementos: list
  + Cola()
  + push(elemento: Object): void
  + pop(): Object
  + isEmpty(): bool
  + top(): Object
  + size(): int
  + reverse(): Cola
  + pushAll(otraCola: Cola): void
}

class Persona{
  - nombre: str
  + Persona(nombre: str)
  + getNombre(): str
}
class Cliente {
  - tipo: str
  + Cliente(nombre: str, tipo: str)
  + get_tipo(): str
}

class CajaBanco{
  + main(): void
}


CajaBanco ..> Cola : usa >
CajaBanco ..> Persona : crea >
Cola o-- Persona : contiene >


@enduml